[gd_scene load_steps=7 format=3 uid="uid://ch3m2dhgyq3ju"]

[ext_resource type="Script" path="res://Scripts/Tower/tower_build.gd" id="1_8pk2d"]
[ext_resource type="PackedScene" uid="uid://dpkvkece3jyx7" path="res://Single Scenes/Towers/red_tower.tscn" id="2_jpd4u"]
[ext_resource type="Texture2D" uid="uid://5g2reer8ld2a" path="res://Resoursec (tiny swords)/Factions/Knights/Buildings/Tower/Tower_Construction.png" id="3_2ggdm"]
[ext_resource type="Texture2D" uid="uid://j7phvb25rhfe" path="res://Resoursec (tiny swords)/Factions/Knights/Buildings/Tower/Tower_Red.png" id="4_81h2d"]
[ext_resource type="Texture2D" uid="uid://dy0ydgl365wxj" path="res://Resoursec (tiny swords)/Factions/Knights/Buildings/Tower/Tower_Blue.png" id="5_hi6ea"]
[ext_resource type="Texture2D" uid="uid://q1g27pfg8gt3" path="res://Resoursec (tiny swords)/Factions/Knights/Buildings/Tower/Tower_Yellow.png" id="6_gif6d"]

[node name="Tower_Build" type="Node2D"]
script = ExtResource("1_8pk2d")
red_tower = ExtResource("2_jpd4u")
metadata/_edit_group_ = true

[node name="Tower_construct" type="Sprite2D" parent="."]
texture = ExtResource("3_2ggdm")

[node name="Select" type="Button" parent="Tower_construct"]
anchors_preset = -1
anchor_left = 0.0234375
anchor_top = 0.5625
anchor_right = 0.992188
anchor_bottom = 0.914062
offset_left = -64.0
offset_top = -128.0
offset_right = -64.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Tower_construct"]
anchors_preset = -1
anchor_left = -1.08594
anchor_top = -0.417969
anchor_right = 2.16406
anchor_bottom = 0.554688
offset_left = -69.0
offset_top = -128.0
offset_right = -69.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Tower_construct/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -128.0
offset_right = 196.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="Red_Tower" type="TextureButton" parent="Tower_construct/Panel/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_81h2d")

[node name="Blue_Tower" type="TextureButton" parent="Tower_construct/Panel/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_hi6ea")

[node name="Yellow_Tower" type="TextureButton" parent="Tower_construct/Panel/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_gif6d")

[connection signal="pressed" from="Tower_construct/Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Tower_construct/Panel/HBoxContainer/Red_Tower" to="." method="_on_red_tower_pressed"]
[connection signal="pressed" from="Tower_construct/Panel/HBoxContainer/Blue_Tower" to="." method="_on_blue_tower_pressed"]
[connection signal="pressed" from="Tower_construct/Panel/HBoxContainer/Yellow_Tower" to="." method="_on_yellow_tower_pressed"]
